# cross-term

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug-problem-report.md  bug_report.md
cross-term/: CMakeLists.txt  Makefile  myfile.txt
cross-term/src/: imports.hpp  main.c  main.cpp  main.hpp
cross-term/src/controllers/: shell.cpp  shell.hpp
cross-term/src/environment/: config-old.hpp  config.hpp  error.cpp  error.hpp  imports.hpp  logger.cpp  logger.hpp
cross-term/src/lib/: trim.cpp  trim.hpp
cross-term/src/managers/: command_manager.c++  command_manager.cpp  command_manager.hpp  file_manager.cpp  file_manager.hpp  managers.hpp  settings_manager.cpp  settings_manager.hpp
cross-term/src/models/: config.cpp  config.hpp
docs/: building-unix.md  building-windows.md
